AnsibleTemplate uses now `host` instead of `ip` as ansible `-hosts`

--- a/resources/haproxy_config/actions/remove.yml
+++ b/resources/haproxy_config/actions/remove.yml
@@ -1,5 +1,5 @@
 # TODO
-- hosts: [{{ ip }}]
+- hosts: [{{host}}]]
   sudo: yes
   tasks:
     - file: path={{ config_dir.value['src'] }} state=absent
