--- a/resources/haproxy_config/actions/remove.yml
+++ b/resources/haproxy_config/actions/remove.yml
@@ -1,5 +1,5 @@
 # TODO
-- hosts: [{{host}}]]
+- hosts: [{{host}}]
   sudo: yes
   tasks:
     - file: path={{ config_dir.value['src'] }} state=absent
