Fix ml2 agent resource inputs
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/resources/neutron_agents_ml2_ovs_puppet/meta.yaml
+++ b/resources/neutron_agents_ml2_ovs_puppet/meta.yaml
@@ -33,8 +33,8 @@ input:
     schema: [str]
     value: []
   local_ip:
-    schema: bool
-    value: false
+    schema: str
+    value: ''
   tunnel_bridge:
     schema: str
     value: 'br-tun'
