--- a/resources/haproxy_service/actions/run.yml
+++ b/resources/haproxy_service/actions/run.yml
@@ -1,7 +1,10 @@
-
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - service:
+    - apt:
         name: haproxy
-        state: reloaded
+        state: present
+    - replace:
+        dest: '/etc/default/haproxy'
+        regexp: ENABLED=0
+        replace: ENABLED=1
