Added comment about wget ... | bash things

--- a/resources/riak_node/actions/run.yml
+++ b/resources/riak_node/actions/run.yml
@@ -5,7 +5,11 @@
     - shell: killall -u riak
       ignore_errors: yes
     # remove above when non tests
+
+    # we install ubuntu repo there,
+    # NOT recommended on production
     - shell: curl -s https://packagecloud.io/install/repositories/basho/riak/script.deb.sh | sudo bash
+
     - apt:
         name: riak
         state: present
