Address comments to lxc branch and fix several bugs with example-lxc.py
- C.HOST_KEY_CHECKING = False for ansible_playbook.py handler
- mkdir -p {{keys_dir}} added to ssh_key resource run action

--- a/resources/ssh_key/actions/run.yml
+++ b/resources/ssh_key/actions/run.yml
@@ -3,10 +3,12 @@
   gather_facts: false
   # this is default variables, they will be overwritten by resource one
   vars:
-    path: /vagrant/.ssh/id_rsa
+    keys_dir: /vagrant/.ssh
+    private_key: /vagrant/.ssh/id_rsa
     passphrase: ''
   tasks:
-    - stat: path={{path}}
+    - shell: mkdir -p {{keys_dir}}
+    - stat: path={{private_key}}
       register: key
-    - shell: ssh-keygen -t rsa -f {{path}} -N ""
+    - shell: ssh-keygen -t rsa -f {{private_key}} -N ""
       when: key.stat.exists == False
