--- a/resources/rabbitmq_config/actions/run.yml
+++ b/resources/rabbitmq_config/actions/run.yml
@@ -5,4 +5,4 @@
     admin_password: {{admin_password}}
   tasks:
     - file: path={{config_dir}} state=directory
-    - template: src={{resource_dir}}/templates/rabbitmq.conf dest={{config_dir}}/rabbitmq.conf
+    - template: src={{templates_dir}}/rabbitmq.conf dest={{config_dir}}/rabbitmq.conf
