--- a/resources/riak_node/actions/run.yml
+++ b/resources/riak_node/actions/run.yml
@@ -18,7 +18,7 @@
         state: stopped
     - file: path=/etc/riak/riak.conf state=touch
     - template:
-        src: {{ resource_dir }}/templates/riak.conf
+        src: {{templates_dir}}/riak.conf
         dest: /etc/riak/riak.conf
     - shell: rm -fr /var/lib/riak/kv_vnode/*
     - shell: rm -fr /var/lib/riak/ring/*
