--- a/resources/riak_node/actions/update.yml
+++ b/resources/riak_node/actions/update.yml
@@ -5,7 +5,7 @@
         name: riak
         state: stopped
     - template:
-        src: {{ resource_dir }}/templates/riak.conf
+        src: {{templates_dir}}/riak.conf
         dest: /etc/riak/riak.conf
     - service:
         name: riak
