Remove unused ansible modules. Update resources

--- a/resources/rabbitmq_user/actions/remove.yml
+++ b/resources/rabbitmq_user/actions/remove.yml
@@ -1,6 +1,6 @@
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - new_rabbitmq_user: user={{user_name}}
-                         vhost={{vhost_name}}
-                         state=absent
+    - rabbitmq_user: user={{user_name}}
+                     vhost={{vhost_name}}
+                     state=absent
