--- a/resources/rabbitmq_user/actions/run.yml
+++ b/resources/rabbitmq_user/actions/run.yml
@@ -1,11 +1,11 @@
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - new_rabbitmq_user: user={{user_name}}
-                         password={{password}}
-                         vhost={{vhost_name}}
-                         configure_priv=.*
-                         read_priv=.*
-                         write_priv=.*
-                         tags={{tags}}
-                         state=present
+    - rabbitmq_user: user={{user_name}}
+                     password={{password}}
+                     vhost={{vhost_name}}
+                     configure_priv=.*
+                     read_priv=.*
+                     write_priv=.*
+                     tags={{tags}}
+                     state=present
