--- a/resources/rabbitmq_vhost/actions/remove.yml
+++ b/resources/rabbitmq_vhost/actions/remove.yml
@@ -1,5 +1,5 @@
 - hosts: [{{ ip }}]
   sudo: yes
   tasks:
-    - new_rabbitmq_vhost: name={{vhost_name}}
-                          state=absent
+    - rabbitmq_vhost: name={{vhost_name}}
+                      state=absent
