--- a/resources/ro_node/meta.yaml
+++ b/resources/ro_node/meta.yaml
@@ -6,6 +6,9 @@ input:
     ip:
       schema: str!
       value:
+    name:
+      schema: str
+      value:
     ssh_key:
       schema: str!
       value:
