Resolve several problems after conflicts

--- a/resources/hosts_file/meta.yaml
+++ b/resources/hosts_file/meta.yaml
@@ -13,8 +13,8 @@ input:
       schema: str!
       value:
     hosts_names:
-      schema: [{value: str!}]
+      schema: [str!]
       value: []
     hosts_ips:
-      schema: [{value: str!}]
+      schema: [str!]
       value: []
