--- a/resources/solar_bootstrap/actions/run.yaml
+++ b/resources/solar_bootstrap/actions/run.yaml
@@ -5,7 +5,7 @@
   sudo: yes
   tasks:
     - script: /vagrant/bootstrap/playbooks/files/ubuntu-ansible.sh
-#- include: celery.yml tags=['master'] celery_dir=/var/run/celery
-- include: /vagrant/bootstrap/playbooks/build-main.yml
-- include: /vagrant/bootstrap/playbooks/custom-configs.yml master_ip={{ master_ip }}
-- include: /vagrant/bootstrap/playbooks/celery.yml tags=slave
+#- include: celery.yaml tags=['master'] celery_dir=/var/run/celery
+- include: /vagrant/bootstrap/playbooks/build-main.yaml
+- include: /vagrant/bootstrap/playbooks/custom-configs.yaml master_ip={{ master_ip }}
+- include: /vagrant/bootstrap/playbooks/celery.yaml tags=slave
