--- a/resources/mariadb_user/meta.yaml
+++ b/resources/mariadb_user/meta.yaml
@@ -2,8 +2,8 @@ id: mariadb_user
 handler: ansible
 version: 1.0.0
 actions:
-    run: run.yml
-    remove: remove.yml
+    run: run.yaml
+    remove: remove.yaml
 input:
     user_password:
       schema: str!
