--- a/templates/glance.yaml
+++ b/templates/glance.yaml
@@ -2,7 +2,7 @@ id: glance_{{idx}}
 
 resources:
   - id: glance_base_{{ idx }}
-    from: templates/glance_db.yml
+    from: templates/glance_db.yaml
     values:
       idx: '{{ idx }}'
 
