--- a/resources/haproxy_config/meta.yaml
+++ b/resources/haproxy_config/meta.yaml
@@ -9,19 +9,19 @@ input:
       schema: {src: str!, dst: str!}
       value: {src: /etc/solar/haproxy, dst: /etc/haproxy}
     listen_ports:
-      schema: [{value: int}]
+      schema: [int]
       value: []
     configs:
-      schema: [{value: [{value: str}]}]
+      schema: [[str]]
       value: []
     configs_names:
-      schema: [{value: str}]
+      schema: [str]
       value: []
     configs_ports:
-      schema: [{value: [{value: int}]}]
+      schema: [[int]]
       value: []
     configs_protocols:
-      schema: [{value: str}]
+      schema: [str]
       value: []
     ssh_user:
       schema: str!
