--- a/resources/hosts_file/actions/run.yaml
+++ b/resources/hosts_file/actions/run.yaml
@@ -1,11 +1,11 @@
 - hosts: [{{host}}]
   sudo: yes
   tasks:
-    {% for ip, host in zip(hosts_ips, hosts_names) %}
-    - name: Create hosts entries for {{host}} => {{ip}}
+    {% for val in hosts %}
+    - name: Create hosts entries for {{val['name']}} => {{val['ip']}}
       lineinfile:
         dest: /etc/hosts
-        regexp: '.*{{host}}$'
-        line: '{{ip}} {{host}}'
+        regexp: '.*{{val['name']}}$'
+        line: '{{val['ip']}} {{val['name']}}'
         state: present
     {% endfor %}
