--- a/templates/riak_nodes.yaml
+++ b/templates/riak_nodes.yaml
@@ -4,17 +4,20 @@ resources:
     from: resources/ro_node
     values:
       ip: '10.0.0.3'
+      name: 'node1'
       ssh_key: '/vagrant/.vagrant/machines/solar-dev1/virtualbox/private_key'
       ssh_user: 'vagrant'
   - id: node2
     from: resources/ro_node
     values:
       ip: '10.0.0.4'
+      name: 'node2'
       ssh_key: '/vagrant/.vagrant/machines/solar-dev2/virtualbox/private_key'
       ssh_user: 'vagrant'
   - id: node3
     from: resources/ro_node
     values:
       ip: '10.0.0.5'
+      name: 'node3'
       ssh_key: '/vagrant/.vagrant/machines/solar-dev3/virtualbox/private_key'
       ssh_user: 'vagrant'
