Improve VirtualResources - add support for events - refactor code after orm changes

--- a/templates/riak_cluster.yml
+++ b/templates/riak_cluster.yml
@@ -1,13 +1,24 @@
 id: riak_node
 
 resources:
-{% for i in range(idx|int) %}
-  - id: riak_service_{{i}}
+  - id: riak_service0
+    from: resources/riak_node
+    values:
+      riak_self_name: 'riak0'
+      riak_hostname: 'riak_server0.solar'
+      riak_name: 'riak0@riak_server0.solar'
+      ip: '{{nodes[0]}}::ip'
+      ssh_user: '{{nodes[0]}}::ssh_user'
+      ssh_key: '{{nodes[0]}}::ssh_key'
+
+{% for i in range(1, idx|int) %}
+  - id: riak_service{{i}}
     from: resources/riak_node
     values:
       riak_self_name: 'riak{{i}}'
       riak_hostname: 'riak_server{{i}}.solar'
       riak_name: 'riak{{i}}@riak_server{{i}}.solar'
+      join_to: 'riak_service0::riak_name'
       ip: '{{nodes[i]}}::ip'
       ssh_user: '{{nodes[i]}}::ssh_user'
       ssh_key: '{{nodes[i]}}::ssh_key'
@@ -17,19 +28,18 @@ resources:
   - id: hosts_file{{i}}
     from: resources/hosts_file
     values:
-      hosts_names: 
+      hosts:name: 
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::riak_hostname 
+        - riak_service{{j}}::riak_hostname::NO_EVENTS
         {% endfor %}
-      hosts_ips:
+      hosts:ip:
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::ip
+        - riak_service{{j}}::ip::NO_EVENTS
         {% endfor %}
       ip: '{{nodes[i]}}::ip'
       ssh_user: '{{nodes[i]}}::ssh_user'
       ssh_key: '{{nodes[i]}}::ssh_key'
 {% endfor %}
-
 
 {% for i in range(idx|int) %}
   - id: haproxy_service_config_http{{i}}
@@ -40,11 +50,11 @@ resources:
       name: 'riak_haproxy_http{{i}}'
       servers:
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::riak_hostname 
+        - riak_service{{j}}::riak_hostname
         {% endfor %}
       ports:
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::riak_port_http
+        - riak_service{{j}}::riak_port_http
         {% endfor %}
 {% endfor %}
 
@@ -57,11 +67,11 @@ resources:
       name: 'riak_haproxy_pb{{i}}'
       servers:
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::riak_hostname 
+        - riak_service{{j}}::riak_hostname
         {% endfor %}
       ports:
         {% for j in range(idx|int) %}
-        - riak_service_{{j}}::riak_port_pb
+        - riak_service{{j}}::riak_port_pb
         {% endfor %}
 {% endfor %}
 
@@ -94,8 +104,51 @@ resources:
     from: resources/haproxy_service
     values:
       ports: 
-        - haproxy_config{{i}}::listen_ports
+        - haproxy_config{{i}}::listen_ports::NO_EVENTS
       ip: '{{nodes[i]}}::ip'
       ssh_user: '{{nodes[i]}}::ssh_user'
       ssh_key: '{{nodes[i]}}::ssh_key'
+{% endfor %}
+
+
+events:
+{% for i in range(idx|int) %}
+  - type: depends_on
+    parent_action: 'hosts_file{{i}}.run'
+    state: 'success'
+    depend_action: 'riak_service{{i}}.run'
+{% endfor %}
+
+{% for i in range(1, idx|int) %}
+  - type: react_on
+    parent_action: 'riak_service{{i}}.run'
+    state: 'success'
+    depend_action: 'riak_service{{i}}.join'
+
+  - type: react_on
+    parent_action: 'riak_service{{i}}.leave'
+    state: 'success'
+    depend_action: 'riak_service{{i}}.join'
+
+  - type: react_on
+    parent_action: 'riak_service{{i}}.join'
+    state: 'success'
+    depend_action: 'riak_service0.commit'
+{% endfor %}
+
+{% for i in range(1, idx|int) %}
+  - type: depends_on
+    parent_action: 'haproxy_service{{i}}.run'
+    state: 'success'
+    depend_action: 'haproxy_config{{i}}.run'
+
+  - type: react_on
+    parent_action: 'haproxy_config{{i}}.run'
+    state: 'success'
+    depend_action: 'haproxy_service{{i}}.apply_config'
+
+  - type: react_on
+    parent_action: 'haprox_config{{i}}.update'
+    state: 'success'
+    depend_action: 'haproxy_service{{i}}.apply_config'
 {% endfor %}
