--- a/resources/ro_node/meta.yaml
+++ b/resources/ro_node/meta.yaml
@@ -14,4 +14,7 @@ input:
     #   value:
     name:
       schema: str
-      value:
+      value: a node
+    location_id:
+      schema: str!
+      value: $uuid
