--- a/resources/transports/meta.yaml
+++ b/resources/transports/meta.yaml
@@ -3,3 +3,11 @@ input:
   transports:
     schema: [{user: str, password: str, port: int!, key: str, name: str!}]
     value: []
+  transports_id:
+    schema: str!
+    value: $uuid
+    reverse: True
+  location_id:
+    schema: str!
+    value: 
+    reverse: True
