Update riak cluster example after changes is HAProxy resources

--- a/templates/riak_cluster.yml
+++ b/templates/riak_cluster.yml
@@ -48,11 +48,11 @@ resources:
       listen_port: 8098
       protocol: 'http'
       name: 'riak_haproxy_http{{i}}'
-      servers:
+      backends:server:
         {% for j in range(idx|int) %}
         - riak_service{{j}}::riak_hostname
         {% endfor %}
-      ports:
+      backends:port:
         {% for j in range(idx|int) %}
         - riak_service{{j}}::riak_port_http
         {% endfor %}
@@ -65,11 +65,11 @@ resources:
       listen_port: 8087
       protocol: 'tcp'
       name: 'riak_haproxy_pb{{i}}'
-      servers:
+      backends:server:
         {% for j in range(idx|int) %}
         - riak_service{{j}}::riak_hostname
         {% endfor %}
-      ports:
+      backends:port:
         {% for j in range(idx|int) %}
         - riak_service{{j}}::riak_port_pb
         {% endfor %}
@@ -79,21 +79,18 @@ resources:
   - id: haproxy_config{{i}}
     from: resources/haproxy_config
     values:
-      configs_protocols:
+      config:protocol:
         - haproxy_service_config_http{{i}}::protocol
         - haproxy_service_config_pb{{i}}::protocol
-      listen_ports:
+      config:listen_port:
         - haproxy_service_config_http{{i}}::listen_port
         - haproxy_service_config_pb{{i}}::listen_port
-      configs_names:
+      config:name:
         - haproxy_service_config_http{{i}}::name
         - haproxy_service_config_pb{{i}}::name
-      configs:
-        - haproxy_service_config_http{{i}}::servers
-        - haproxy_service_config_pb{{i}}::servers
-      configs_ports:
-        - haproxy_service_config_http{{i}}::ports
-        - haproxy_service_config_pb{{i}}::ports
+      config:backends:
+        - haproxy_service_config_http{{i}}::backends
+        - haproxy_service_config_pb{{i}}::backends
       ip: '{{nodes[i]}}::ip'
       ssh_user: '{{nodes[i]}}::ssh_user'
       ssh_key: '{{nodes[i]}}::ssh_key'
@@ -103,8 +100,6 @@ resources:
   - id: haproxy_service{{i}}
     from: resources/haproxy_service
     values:
-      ports: 
-        - haproxy_config{{i}}::listen_ports::NO_EVENTS
       ip: '{{nodes[i]}}::ip'
       ssh_user: '{{nodes[i]}}::ssh_user'
       ssh_key: '{{nodes[i]}}::ssh_key'
