--- a/templates/riak_cluster.yml
+++ b/templates/riak_cluster.yml
@@ -143,7 +143,7 @@ events:
     depend_action: 'haproxy_service{{i}}.apply_config'
 
   - type: react_on
-    parent_action: 'haprox_config{{i}}.update'
+    parent_action: 'haproxy_config{{i}}.update'
     state: 'success'
     depend_action: 'haproxy_service{{i}}.apply_config'
 {% endfor %}
