--- a/resources/cinder_volume_puppet/meta.yaml
+++ b/resources/cinder_volume_puppet/meta.yaml
@@ -30,11 +30,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/cinder_volume_service, resources/cinder_volume, resources/cinder]
