--- a/resources/docker_container/meta.yaml
+++ b/resources/docker_container/meta.yaml
@@ -17,11 +17,11 @@ input:
     volume_binds:
       schema: [{src: str, dst: str, mode: str}]
       value: []
-    ssh_user:
-      schema: str!
-      value: []
-    ssh_key:
-      schema: str!
-      value: []
+    # ssh_user:
+    #   schema: str!
+    #   value: []
+    # ssh_key:
+    #   schema: str!
+    #   value: []
 
 tags: [resource/container]
