--- a/resources/glance_api_service/meta.yaml
+++ b/resources/glance_api_service/meta.yaml
@@ -17,12 +17,12 @@ input:
     volume_binds:
       schema: [{src: str, dst: str, mode: str}]
       value: []
-    ssh_user:
-      schema: str!
-      value: []
-    ssh_key:
-      schema: str!
-      value: []
+    # ssh_user:
+    #   schema: str!
+    #   value: []
+    # ssh_key:
+    #   schema: str!
+    #   value: []
 
     db_password:
       schema: str!
