--- a/resources/glance_registry_puppet/meta.yaml
+++ b/resources/glance_registry_puppet/meta.yaml
@@ -95,12 +95,12 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
     db_user:
       schema: str!
