--- a/resources/haproxy_config/meta.yaml
+++ b/resources/haproxy_config/meta.yaml
@@ -11,11 +11,11 @@ input:
     config:
       schema: [{backends: [{server: str!, port: int!}], listen_port: int!, protocol: str!, name: str!}]
       value: []
-    ssh_user:
-      schema: str!
-      value:
-    ssh_key:
-      schema: str!
-      value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
 
 tags: [resources/haproxy, resource/haproxy_config]
