--- a/resources/keystone_tenant/meta.yaml
+++ b/resources/keystone_tenant/meta.yaml
@@ -17,11 +17,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/keystone_tenant, resources/keystone]
