--- a/resources/lxc_host/meta.yaml
+++ b/resources/lxc_host/meta.yaml
@@ -6,12 +6,12 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
     provides:
        schema: str
        value: infra
