--- a/resources/nova_neutron_puppet/meta.yaml
+++ b/resources/nova_neutron_puppet/meta.yaml
@@ -84,11 +84,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/nova_neutron_service, resources/nova_neutron, resources/nova_compute, resources/nova]
