--- a/resources/apache_puppet/meta.yaml
+++ b/resources/apache_puppet/meta.yaml
@@ -176,11 +176,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/apache_service, resources/apache]
