--- a/resources/cinder_api_puppet/meta.yaml
+++ b/resources/cinder_api_puppet/meta.yaml
@@ -68,11 +68,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/cinder_api_service, resources/cinder_api, resources/cinder]
