--- a/resources/cinder_glance_puppet/meta.yaml
+++ b/resources/cinder_glance_puppet/meta.yaml
@@ -26,12 +26,12 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
     glance_api_servers_port:
       schema: int
