--- a/resources/docker/meta.yaml
+++ b/resources/docker/meta.yaml
@@ -6,11 +6,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_user:
-      schema: str!
-      value:
-    ssh_key:
-      schema: str!
-      value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
 
 tags: [resources/docker]
