--- a/resources/glance_config/meta.yaml
+++ b/resources/glance_config/meta.yaml
@@ -5,12 +5,12 @@ input:
     ip:
       schema: str!
       value:
-    ssh_user:
-      schema: str!
-      value: []
-    ssh_key:
-      schema: str!
-      value: []
+    # ssh_user:
+    #   schema: str!
+    #   value: []
+    # ssh_key:
+    #   schema: str!
+    #   value: []
 
     config_dir:
       schema: {src: str!, dst: str!, mode: str}
