--- a/resources/haproxy_service/meta.yaml
+++ b/resources/haproxy_service/meta.yaml
@@ -5,11 +5,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_user:
-      schema: str!
-      value:
-    ssh_key:
-      schema: str!
-      value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
 
 tags: [resources/haproxy, resource/haproxy_service]
