--- a/resources/keystone_config/meta.yaml
+++ b/resources/keystone_config/meta.yaml
@@ -27,11 +27,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/keystone_config, resources/keystone]
