--- a/resources/mariadb_db/meta.yaml
+++ b/resources/mariadb_db/meta.yaml
@@ -31,9 +31,9 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
