--- a/resources/mariadb_user/meta.yaml
+++ b/resources/mariadb_user/meta.yaml
@@ -32,9 +32,9 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
