--- a/resources/nova_generic_service_puppet/meta.yaml
+++ b/resources/nova_generic_service_puppet/meta.yaml
@@ -23,11 +23,11 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
 
 tags: [resource/nova_generic_service, resources/nova]
