--- a/resources/openrc_file/meta.yaml
+++ b/resources/openrc_file/meta.yaml
@@ -21,9 +21,9 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
