--- a/resources/rabbitmq_config/meta.yaml
+++ b/resources/rabbitmq_config/meta.yaml
@@ -14,9 +14,9 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
