--- a/resources/riak_join_single/meta.yaml
+++ b/resources/riak_join_single/meta.yaml
@@ -10,9 +10,9 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
