--- a/resources/riak_node/meta.yaml
+++ b/resources/riak_node/meta.yaml
@@ -9,12 +9,12 @@ input:
     ip:
       schema: str!
       value:
-    ssh_key:
-      schema: str!
-      value:
-    ssh_user:
-      schema: str!
-      value:
+    # ssh_key:
+    #   schema: str!
+    #   value:
+    # ssh_user:
+    #   schema: str!
+    #   value:
     riak_self_name:
       schema: str!
       value:
