--- a/resources/solar_bootstrap/meta.yaml
+++ b/resources/solar_bootstrap/meta.yaml
@@ -4,12 +4,12 @@ input:
   ip:
     schema: str!
     value:
-  ssh_key:
-    schema: str!
-    value:
-  ssh_user:
-    schema: str!
-    value:
+  # ssh_key:
+  #   schema: str!
+  #   value:
+  # ssh_user:
+  #   schema: str!
+  #   value:
 
   master_ip:
     schema: str!
