Fix several inconsistencies with data and receiver input in case of hash
Add example of usage to hosts_file/README.md

--- a/resources/hosts_file/actions/remove.yaml
+++ b/resources/hosts_file/actions/remove.yaml
@@ -2,4 +2,4 @@
   sudo: yes
   tasks:
     - name: Remove hosts file
-      shell: rm /etc/hosts
+      shell: echo '# flushed by ansible' > /etc/hosts
