--- a/resources/ro_node/meta.yaml
+++ b/resources/ro_node/meta.yaml
@@ -1,4 +1,4 @@
-id: mariadb
+id: ro_node
 handler: none
 version: 1.0.0
 actions:
@@ -19,3 +19,5 @@ input:
       schema: str!
       value: $uuid
       reverse: True
+
+tags: [resources=node]
