--- a/resources/hosts_file/actions/run.yaml
+++ b/resources/hosts_file/actions/run.yaml
@@ -5,7 +5,7 @@
     - name: Create hosts entries for {{val['name']}} => {{val['ip']}}
       lineinfile:
         dest: /etc/hosts
-        regexp: '.*{{val['name']}}$'
-        line: '{{val['ip']}} {{val['name']}}'
+        regexp: ".*{{val['name']}}$"
+        line: "{{val['ip']}} {{val['name']}}"
         state: present
     {% endfor %}
