--- a/resources/transport_ssh/meta.yaml
+++ b/resources/transport_ssh/meta.yaml
@@ -13,10 +13,11 @@ input:
     schema: str!
     value: ssh
   location_id:
-    schema: str!
+    schema: str
     value:
     reverse: True
     is_own: False
   transports_id:
-    schema: str!
-    value: False
+    schema: str
+    value:
+    is_emit: False
