--- a/resources/transport_solard/actions/run.yaml
+++ b/resources/transport_solard/actions/run.yaml
@@ -2,4 +2,6 @@
   sudo: yes
   tasks:
     - shell: pip install -e /vagrant/solard
+    - shell: start-stop-daemon --stop --make-pidfile --pidfile /tmp/solard.pid --chdir /vagrant/solard --startas /bin/bash -- -c "exec python /vagrant/solard/solard/tcp_server.py > /tmp/solard.log 2>&1"
+      ignore_errors: True
     - shell: start-stop-daemon -b --start --make-pidfile --pidfile /tmp/solard.pid --chdir /vagrant/solard --startas /bin/bash -- -c "exec python /vagrant/solard/solard/tcp_server.py > /tmp/solard.log 2>&1"
