--- a/resources/transports/meta.yaml
+++ b/resources/transports/meta.yaml
@@ -1,7 +1,7 @@
 id: transports
 input:
   transports:
-    schema: [{user: str, password: str, port: int!, key: str, name: str!}]
+    schema: [{user: str, password: str, port: int!, key: str, name: str!, trackers: [str]}]
     value: []
   transports_id:
     schema: str!
