Change action temp files to contain resource.name

--- a/resources/ceph_keys/meta.yaml
+++ b/resources/ceph_keys/meta.yaml
@@ -7,7 +7,7 @@ input:
         value:
     target_directory:
         schema: str!
-        value: /var/lib/astute
+        value: /var/lib/astute/
     key_name:
         schema: str!
         value: ceph
