--- a/resources/ceph_keys/meta.yaml
+++ b/resources/ceph_keys/meta.yaml
@@ -11,4 +11,7 @@ input:
     key_name:
         schema: str!
         value: ceph
+    path:
+        schema: str!
+        value: /var/lib/astute/ceph/
 tags: []
